--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "hamburger": "^0.1.1",
+    "hamburgers": "^1.1.3",
     "normalize.css": "^8.0.1"
   }
 }
